cmake_minimum_required(VERSION 4.1)
project(usaco_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(usaco_cpp milkmix.cpp
        boilerplate.cpp
        race.cpp
        race.h
        milkorder.cpp
        milkorder.h
        drought.cpp
        drought.h
        outofplace.cpp
        outofplace.h
        guess.cpp
        guess.h
        taming.cpp
        taming.h
        angry.cpp
        angry.h
        mooingtime.cpp
        mooingtime.h
        majorityopinion.cpp
        majorityopinion.h
        palindromegame.cpp
        palindromegame.h
        milkexchange.cpp
        milkexchange.h
        leaders.cpp
        leaders.h
        aircownditioningtwo.cpp
        aircownditioningtwo.h
        shell.cpp
        shell.h
        sleepy.cpp
        sleepy.h
        billboard.cpp
        billboard.h
        shuffle.cpp
        shuffle.h
        measurement.cpp
        measurement.h
        bits.cpp
        bits.h
        problem1.cpp
        problem1.h
        problem2.cpp
        problem2.h
        problem3.cpp
        problem3.h
        reflection.cpp
        reflection.h
        astral_superposition.cpp
        cannonball.cpp
        cannonball.h
        mooing_time_2.cpp
        mooing_time_2.h
        cowntact_tracing_2.cpp
        cowntact_tracing_2.h
        printing_sequences.cpp
        printing_sequences.h
        mowing_the_field.cpp
        mowing_the_field.h
        censor.cpp
        censor.h
        blocks.cpp
        blocks.h
)
