cmake_minimum_required(VERSION 4.1)
project(usaco_cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(usaco_cpp milkmix.cpp
        boilerplate.cpp
        race.cpp
        race.h
        milkorder.cpp
        milkorder.h
        drought.cpp
        drought.h
        outofplace.cpp
        outofplace.h
        guess.cpp
        guess.h
        taming.cpp
        taming.h
        angry.cpp
        angry.h
        mooingtime.cpp
        mooingtime.h
        majorityopinion.cpp
        majorityopinion.h
        palindromegame.cpp
        palindromegame.h
        milkexchange.cpp
        milkexchange.h
        leaders.cpp
        leaders.h
        aircownditioningtwo.cpp
        aircownditioningtwo.h
        shell.cpp
        shell.h
        sleepy.cpp
        sleepy.h
        billboard.cpp
        billboard.h
        shuffle.cpp
        shuffle.h
        measurement.cpp
        measurement.h
        bits.cpp
        bits.h
        problem1.cpp
        problem1.h
        problem2.cpp
        problem2.h
        problem3.cpp
        problem3.h
        reflection.cpp
        reflection.h
        astral_superposition.cpp
        cannonball.cpp
        cannonball.h
        mooing_time_2.cpp
        mooing_time_2.h
        cowntact_tracing_2.cpp
        cowntact_tracing_2.h
        printing_sequences.cpp
        printing_sequences.h
        mowing_the_field.cpp
        mowing_the_field.h
        censor.cpp
        censor.h
        blocks.cpp
        blocks.h
        traffic.cpp
        traffic.h
        maximum_distance.cpp
        maximum_distance.h
        pails.cpp
        pails.h
        triangles.cpp
        triangles.h
        circlecross.cpp
        circlecross.h
        substring_counting.cpp
        substring_counting.h
        investment_strategy.cpp
        investment_strategy.h
        caesar_shift.cpp
        caesar_shift.h
        element.cpp
        element.h
        basic_sorting.cpp
        basic_sorting.h
        neighboing.cpp
        neighboing.h
        daisychains.cpp
        daisychains.h
        mooloo.cpp
        mooloo.h
        acorns.cpp
        acorns.h
        stuckinarut.cpp
        stuckinarut.h
        rut2.cpp
        run2.h
        stone_jumping.cpp
        stone_jumping.h
        rattlesnake.cpp
        rattlesnake.h
        representatives.cpp
        representatives.h
        tractor_lineup.cpp
        tractor_lineup.h
        candycanefeast.cpp
        candycanefeast.h
        mooing_time_4.cpp
        mooing_time_4.h
        moo_hunt.cpp
        moo_hunt.h
        purchasing_milk.cpp
        purchasing_milk.h
        back_to_back.cpp
        back_to_back.h
        survey.cpp
        survey.h
        diagnose_the_device.cpp
        diagnose_the_device.h
        gerties_painting.cpp
        gerties_painting.h
        cow_racing.cpp
        cow_racing.h
        crop_harvester.cpp
        crop_harvester.h
        math_expression.cpp
        math_expression.h
        quadrants.cpp
        quadrants.h
        pilot_shortage.cpp
        pilot_shortage.h
        the_ravenous_bunny.cpp
        the_ravenous_bunny.h
        problem1_c3.cpp
        problem1_c3.h
        probem2_c3.cpp
        probem2_c3.h
        problem3_c3.cpp
        problem3_c3.h
        questions_based_on_paths_q1.cpp
        questions_based_on_paths_q1.h
        fertilizer_fever.cpp
        fertilizer_fever.h
        game_stuck.cpp
        game_stuck.h
        balancing_stools.cpp
        balancing_stools.h
        wrecking_balll.cpp
        wrecking_balll.h
        fixing_the_fence.cpp
        fixing_the_fence.h
        detectives_puzzle.cpp
        detectives_puzzle3.h
        sentient_stars.cpp
        sentient_stars.h
        bessies_question.cpp
        bessies_question.h
        squirrel_battle.cpp
        squirrel_battle.h
)
